# plp-func

./: README.md  tp.cabal
app/: Main.hs
src/: Arbol23.hs  Diccionario.hs  Lib.hs  Tesoro.hs
test/: Arbol23Spec.hs  DiccionarioSpec.hs  Spec.hs  TesoroSpec.hs
